p2error.txt
Script started on Mon Feb 18 16:48:03 2019
p2% make
gcc -o pp_ps pp_ps.c
pp_ps.c:In function 'readdirs':
pp_ps.c:149:13: error: 'struct dirent' has no member named 'd_type'
       if((ep->d_type == DT_DIR) && (pid > 0))
             ^
pp_ps.c:149:25: error: 'DT_DIR' undeclared (first use in this function)
       if((ep->d_type == DT_DIR) && (pid > 0))
                         ^
pp_ps.c:149:25: note: each undeclared identifier is reported only once for each function it appears in
*** Error code 1
make: Fatal error: Command failed for target `output'
p2% exit
p2% 
script done on Mon Feb 18 16:48:09 2019
